# engrams

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MCP_MESSAGING_GUIDELINES.md  MCP_SENTIMENT_RESPONSE_SUMMARY.md  NOTICE  PYPI_PUBLISHING_GUIDE.md  README.md  RELEASE_NOTES.md  UNIVERSAL_WORKSPACE_DETECTION.md  deploy.sh  engrams_deep_dive.md  pyproject.toml  requirements.txt  test_output.txt  v0.2.4_UPDATE_GUIDE.md
.astro/: settings.json
docs/: astro.config.mjs
docs/PROPOSED_FEATURES/: decision-enforcement-gap.md
docs/src/components/: Header.astro  Sidebar.astro
docs/src/layouts/: DocsLayout.astro
docs/src/pages/: index.astro
docs/src/pages/docs/: contributing.astro  dns-setup.astro  getting-started.astro  installation.astro  quick-start.astro
docs/src/pages/docs/concepts/: how-it-works.astro  knowledge-types.astro  mcp.astro  why-engrams-mcp.astro
docs/src/pages/docs/features/: batch-export.astro  bindings.astro  budgeting.astro  cost-efficiency.astro  dashboard.astro  governance.astro  knowledge-graph.astro  onboarding.astro  semantic-search.astro
docs/src/pages/docs/reference/: ai-tool-setup.astro  cli.astro  mcp-tools.astro
engrams-custom-instructions/: cascade_engrams_strategy_compact  claude_code_engrams_strategy  cline_engrams_strategy  cursor_engrams_strategy  generic_engrams_strategy  mem4sprint.md  mem4sprint.schema_and_templates.md  roo_code_engrams_strategy  windsurf_engrams_strategy
scripts/: sync_scaffolds.sh
src/engrams/: cli.py  init_command.py  main.py
src/engrams/bindings/: __init__.py  db_operations.py  matcher.py  models.py
src/engrams/budgeting/: __init__.py  estimator.py  models.py  profiles.py  scorer.py  selector.py
src/engrams/core/: backward_compat.py  config.py  embedding_service.py  exceptions.py  workspace_detector.py
src/engrams/dashboard/: __init__.py  app.py  db_reader.py  ollama_bridge.py
src/engrams/dashboard/static/: app.js  graph.js  index.html  styles.css
src/engrams/db/: database.py  models.py  vector_store_service.py
src/engrams/db/migrations/: 2026_02_20_governance_and_bindings.py
src/engrams/governance/: __init__.py  conflict_detector.py  db_operations.py  models.py
src/engrams/handlers/: mcp_handlers.py
src/engrams/onboarding/: __init__.py  briefing.py  models.py  templates.py
src/engrams/templates/: _core_strategy.yaml  _delta_claude_code.yaml  _delta_claude_desktop.yaml  _delta_cline.yaml  _delta_cursor.yaml  _delta_generic.yaml  _delta_roo.yaml  _delta_windsurf.yaml  claude_code_engrams_strategy  claude_desktop_engrams_strategy  cline_engrams_strategy  cursor_engrams_strategy  generic_engrams_strategy  roo_code_engrams_strategy  windsurf_engrams_strategy
tests/: conftest.py  test_database_creation_rigor.py  test_handlers_integration.py  test_int_coercion.py
tests/test_bindings/: test_binding_tools.py  test_matcher.py
tests/test_budgeting/: test_estimator.py  test_scorer.py  test_selector.py
tests/test_dashboard/: test_db_reader.py
tests/test_governance/: test_conflict_detector.py  test_scope_tools.py
tests/test_integration/: test_cross_feature.py
tests/test_onboarding/: test_briefing.py  test_templates.py
tests/test_scaffold/: test_roo_scaffold.py
tests/test_team_sync/: test_default_visibility.py  test_file_format.py  test_filtered_export_merge_import.py  test_indexer.py  test_integration_filesystem_first.py  test_write_through.py
